// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alerts if it tag is not recognized 1`] = `
<div
  className="content"
>
  <div
    className="paragraph"
    key="0,0"
  >
    stuff 
  </div>
  <div
    className="paragraph"
    key="0,1"
  >
    <Alert
      variant="error"
    >
      unrecognized watext element: 
      somethingbad
    </Alert>
  </div>
  <div
    className="paragraph"
    key="0,2"
  >
     here
  </div>
</div>
`;

exports[`alerts if the item has child elements 1`] = `
<div
  className="content"
>
  <div
    className="paragraph"
    key="0,0"
  >
    here is 
  </div>
  <div
    className="paragraph"
    key="0,1"
  >
    <Alert
      variant="error"
    >
      Item elements may not contain other elements.
    </Alert>
  </div>
  <div
    className="paragraph"
    key="0,2"
  >
     for you
  </div>
</div>
`;

exports[`alerts if the item lacks an id 1`] = `
<div
  className="content"
>
  <div
    className="paragraph"
    key="0,0"
  >
    <Alert
      variant="error"
    >
      Item elements require an id property
    </Alert>
  </div>
</div>
`;

exports[`creates a paragraph for a top level paragraph tag 1`] = `
<div
  className="content"
>
  <div
    className="paragraph"
    key="0,0"
  >
    foo
  </div>
</div>
`;

exports[`creates and flattens multiple paragraphs when they are nested 1`] = `
<div
  className="content"
>
  <div
    className="paragraph"
    key="0,0"
  >
    foo
  </div>
  <div
    className="paragraph"
    key="0,1"
  >
    bar
  </div>
  <div
    className="paragraph"
    key="0,2"
  >
    baz
  </div>
</div>
`;

exports[`creates at least one paragraph for top level text 1`] = `
<div
  className="content"
>
  <div
    className="paragraph"
    key="0,0"
  >
    foo
  </div>
</div>
`;

exports[`creates item buttons 1`] = `
<div
  className="content"
>
  <div
    className="paragraph"
    key="0,0"
  >
    here is 
    <button
      className="item-button"
      key="an-item"
      onClick={[Function]}
    >
      an item
    </button>
     for you
  </div>
</div>
`;

exports[`creates multiple paragraphs with top level pg 1`] = `
<div
  className="content"
>
  <div
    className="paragraph"
    key="0,0"
  >
    foo
  </div>
  <div
    className="paragraph"
    key="0,1"
  >
    bar
  </div>
</div>
`;

exports[`creates multiple paragraphs with top level text 1`] = `
<div
  className="content"
>
  <div
    className="paragraph"
    key="0,0"
  >
    foo
  </div>
  <div
    className="paragraph"
    key="0,1"
  >
    bar
  </div>
</div>
`;

exports[`creates paragraphs using paragraph tag as a divider 1`] = `
<div
  className="content"
>
  <div
    className="paragraph"
    key="0,0"
  >
    foo
  </div>
  <div
    className="paragraph"
    key="0,1"
  >
    bar
  </div>
</div>
`;

exports[`renders provided text if watext is missing 1`] = `
<div
  className="content"
/>
`;
